# autodevopsbattle

./: CURRENT_BUGS.md  Cargo.toml  README.md  TODO.md
docs/design/: game_design.md  system_graph.md
src/: game_state.rs  lib.rs  main.rs  test_utils.rs
src/components/: architecture.rs  mod.rs  system_graph.rs
src/plugins/: mod.rs
src/plugins/ui/: graph_view.rs  mod.rs  planning_panel.rs  system_status.rs  test_utils.rs
src/resources/: game_state.rs  mod.rs
src/systems/: game_loop.rs  mod.rs
src/test_utils/: mod.rs  test_utils.rs
